config_private_root/iptables-save
# Generated by iptables-save v1.4.12 on Thu Nov 26 11:31:08 2015
*nat
:PREROUTING ACCEPT [430465540:53551483798]
:INPUT ACCEPT [9994860:1429990256]
:OUTPUT ACCEPT [7954881:654329195]
:POSTROUTING ACCEPT [7954881:654329195]
COMMIT
# Completed on Thu Nov 26 11:31:08 2015
# Generated by iptables-save v1.4.12 on Thu Nov 26 11:31:08 2015
*mangle
:PREROUTING ACCEPT [3026101860:439736776564]
:INPUT ACCEPT [2605632062:387615330477]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3935706996:2888739607478]
:POSTROUTING ACCEPT [3937868509:2889137994380]
COMMIT
# Completed on Thu Nov 26 11:31:08 2015
# Generated by iptables-save v1.4.12 on Thu Nov 26 11:31:08 2015
*filter
:INPUT ACCEPT [3455:544027]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3365:561293]
-A INPUT -s <private_ip>/32 -p tcp -m tcp --dport 5911 -j ACCEPT
-A INPUT -s <private_ip>/32 -p tcp -m tcp --dport 5903 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5911 -j DROP
-A INPUT -p tcp -m tcp --dport 5903 -j DROP
-A INPUT -i ifext -j LOG --log-prefix "BANDWIDTH_IN:" --log-level 7
-A FORWARD -o ifext -j LOG --log-prefix "BANDWIDTH_OUT:" --log-level 7
-A FORWARD -i ifext -j LOG --log-prefix "BANDWIDTH_IN:" --log-level 7
-A OUTPUT -o ifext -j LOG --log-prefix "BANDWIDTH_OUT:" --log-level 7
COMMIT
# Completed on Thu Nov 26 11:31:08 2015
